Fix(Java): Begin updating collectors and processors to use new ComponentItem